--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>百度口袋妖怪吧暑期ORAS实机对战大赛对阵表</title>
     <link rel="stylesheet" type="text/css" href="http://libs.baidu.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/default.css">
     <script type="text/javascript" src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript" src="js/csv.min.js"></script>
     <script type="text/javascript" src="js/bracket.js"></script>
-    <script type="text/javascript" src="http://libs.baidu.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div id="main-container">
+        <h1>百度口袋妖怪吧暑期ORAS实机对战大赛对阵表</h1>
+        <div id="group-list" class="btn-group"></div>
+        <div id="brackets"></div>
 	</div>
 </body>
 </html>
