--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 	<div id="main-container">
-        <h1>百度口袋妖怪吧暑期ORAS实机对战大赛对阵表</h1>
+        <h1 id="main-title">百度口袋妖怪吧暑期ORAS实机对战大赛对阵表</h1>
         <div id="group-list" class="btn-group"></div>
         <div id="brackets"></div>
 	</div>
+    <footer>By <a href="http://weibo.com/sunoru">sunoru</a>.</footer>
 </body>
 </html>
