--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="js/bracket.js"></script>
 </head>
 <body class="font-hei">
-	<div id="main-container">
+	<div id="main-container" class="container">
         <h1 id="main-title">百度口袋妖怪吧暑期ORAS实机对战大赛对阵表</h1>
         <div id="group-list"></div>
         <div id="brackets"></div>
