--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
 <body class="font-hei">
 	<div id="main-container" class="container">
         <h1 id="main-title">百度口袋妖怪吧暑期ORAS实机对战大赛对阵表</h1>
-        <div id="group-list"></div>
-        <div id="brackets"></div>
+        <div id="finals" class="hidden-object">
+            <h2>决赛圈</h2>
+        </div>
+        <div id="groupstage">
+            <h2>小组赛</h2>
+            <div id="group-list"></div>
+            <div id="brackets"></div>
+        </div>
 	</div>
     <footer>By <a href="http://weibo.com/sunoru">sunoru</a>.</footer>
 </body>
